--- a/Manual/manual.tex
+++ b/Manual/manual.tex
@@ -1,7 +1,9 @@
 \chapter{User Manual}
 
 \section{Introduction}
-The purpose of the system is to manage the restaurant in terms of orders and bookings more easily. The application enables the user to add, delete or update a booking and it enables the user to add or delete to an order and have the option to print or preview the invoice for the order. In addition, the user can manage the item menu by adding, deleting or updating an item from the menu.
+The purpose of the system is to manage the restaurant in terms of orders and bookings more easily. The application enables the user to add, delete or update a booking and it enables the user to add or delete to an order and have the option to print or preview the invoice for the order. In addition, the user can manage the item menu by adding, deleting or updating an item from the menu. \\
+
+The intended audience for the system was for my client's restaurant. As the system enables the user to manage bookings, the menu and orders, the system could be altered so that it can be used for other restaurants as restaurants usually run the same way.
 
 \section{Installation}
 
@@ -16,13 +18,15 @@ The following hardware will be required to run the system:
 
 	\item A keyboard for user input
 	\item A mouse to navigate around the application
-	\item A Hard Disk Dirve for file storage 
+	\item A Hard Disk Drive for file storage 
 	\item A Visual Display Unit for output
 	\item A printer will be needed if the user wants to be able to print invoices
 	
 
 \end{itemize}
 
+\subsection{Operating System}
+I created and tested the application on my Windows 8.1 64Bit computer and so the compiled executable I created should work on my client's computer as it also runs on Windows 8.1 6Bit (see page 27). I have not tested the application on a 32Bit computer therefore, I do not know if it will run without any problems. I can make a 32 Bit version of the application if needed.
 
 
 \subsection{Prerequisite Installation}
@@ -35,18 +39,59 @@ The following hardware will be required to run the system:
 \subsubsection{Etc.}
 
 \subsection{System Installation}
-
+\begin{landscape}
 The new system has been packaged into a windows installer and so to install the new system, follow these steps: \\
-\\ 1. The install package is called "RestauranSetup", locate to the directory of the install package of where it has been placed. 
+1. The install package is called "RestauranSetup", locate to the directory of the install package of where it has been placed. 
 
 \begin{figure}[H]
-    \includegraphics[height = 20cm]{./Manual/images/install1}
-    \caption{Example of what the installer should look like} \label{fig:Flowchart1}
+    \includegraphics[height = 10cm]{./Manual/images/install1} 
+    \caption{Example of what the installer should look like} \label{fig:install1}
 \end{figure}
-\\
 
-2. Double click on the installer and the 
 
+2. Double click on the installer to run it, the installer will now start to run.
+
+\begin{figure}[H]
+    \includegraphics[height = 10cm]{./Manual/images/install2} 
+    \caption{Start of the installer} \label{fig:install2}
+\end{figure}
+
+3. After waiting for the installer to prepare, the next step of the installer will appear and the step is to choose the directory(location) of where to install the new system.
+
+\begin{figure}[H]
+    \includegraphics[height = 10cm]{./Manual/images/install3} 
+    \caption{Choosing where to install the system} \label{fig:install3}
+\end{figure}
+
+4.  Click on 'Install' to start the installation
+
+\begin{figure}[H]
+    \includegraphics[height = 10cm]{./Manual/images/install4} 
+    \caption{} \label{fig:install4}
+\end{figure}
+
+5. The installation will now begin, the installation will be complete once the status bar is filled.
+
+\begin{figure}[H]
+    \includegraphics[height = 10cm]{./Manual/images/install5} 
+    \caption{Install process} \label{fig:install5}
+\end{figure}
+
+6. The system has now been installed! Click on 'Finish' to close the installation.
+
+\begin{figure}[H]
+    \includegraphics[height = 10cm]{./Manual/images/install6} 
+    \caption{Successful installation} \label{fig:install6}
+\end{figure}
+
+7. As you can see, the system has been installed with all its necessary files. The application is called main\_window.
+
+\begin{figure}[H]
+    \includegraphics[height = 10cm]{./Manual/images/install7} 
+    \caption{Installed system directory} \label{fig:install7}
+\end{figure}
+
+\end{landscape}
 \subsection{Running the System}
 
 \section{Tutorial}
