--- a/Testing/testing.tex
+++ b/Testing/testing.tex
@@ -372,7 +372,7 @@ The actual results for the tests can be found on the detailed plans, there is a 
 
 \subsection{Approach to Testing}
 
-I made sure I tested my program thoroughly by going through different types of testing strategies. Going through different testing strategies made me cover most, if not all areas of my program such as testing the flow of control, validation, algorithms and the outputs.  I chose this approach to ensure my whether my program was usable or not.
+I made sure I tested my program thoroughly by going through different types of testing strategies. Going through different testing strategies made me cover most, if not all areas of my program such as testing the flow of control, validation, algorithms and the outputs.  I chose this approach to ensure my whether my program was usable or not. My first strategy (series 1) was top-down testing which enabled me to test the effectiveness of the navigation in the application. Series 2 is made up of bottom-up testing to ensure that the validation in the application is functioning as intended. Series 3 is made up of black-box testing to make sure the data in my program is being passed/stored correctly and series 4 is made up of white-box testing to make sure that the algorithms used are producing the correct output. As for series 5, it is the acceptance testing to get an overall idea if the application matches my client's specification. The last test series (test series 6) is made up of integration tests to ensure that the data in the database is consistent.
 
 \subsection{Problems Encountered}
 
@@ -380,7 +380,7 @@ I encountered a problem on test 4.03 (\ref{fig:Test10} on page \pageref{fig:Test
 
 \subsection{Strengths of Testing}
 
-The strengths of the approach I took were that I was able to find out whether my program was usable or not. Users of my system will undoubtly make mistakes when inputting information and so I have tested different test data to ensure the system was still usable. In addition, checking the flow of control proved the navigation of the system to be effective.
+The strengths of the approach I took were that I was able to find out whether my program was usable or not by testing each component of the system using the different test strategies (See page 88 for the testing strategies). Users of my system will undoubtly make mistakes when inputting information and so I have tested different types of test data which proved that my system can be reliable in that prospect (See test series 2) . In addition, checking the flow of control proved the navigation of the system to be effective.
 
 \subsection{Weaknesses of Testing}
 
@@ -392,4 +392,4 @@ I believe that the application is reliable. I have tested the input validation w
 
 
 \subsection{Robustness of Application}
-After testing my system without closing it, I believe that application is robust as I did not experience any crashes or any problems that made me not be able use the application normally. Testing the validation did not affect the application in anyway, same goes for the execution of the sql queries.
+After testing my system without closing it, I believe that application is robust as I did not experience any crashes or any problems that made me not be able use the application normally. Testing the validation did not affect the application in anyway, same goes for the execution of the sql queries.An example of me testing the validation can be found on figure \ref{fig:Test1} on page \pageref{fig:Test12}.
