--- a/coursework.tex
+++ b/coursework.tex
@@ -3,7 +3,7 @@
 \definecolor{tableShade}{gray}{0.9}
 \include{settings}
 \begin{document}
-\title{COMP 4}
+\title{Restaurant Simulator}
 \author{Tommy Tham}
 \lhead{Tommy Tham}
 \chead{Candidate No. 5064}
