--- a/Maintenance/maintenance.tex
+++ b/Maintenance/maintenance.tex
@@ -608,7 +608,7 @@ This query fetches all the ordered items with its information such as quantity, 
 update Bookings set Date=? where BookingID=?
 \end{sql}
 
-\subsubsection{Used to update the booking time, given the ID]
+\subsubsection{Used to update the booking time, given the ID}
 \begin{sql}
 update Bookings set Time=? where BookingID=?
 \end{sql}
