--- a/Maintenance/maintenance.tex
+++ b/Maintenance/maintenance.tex
@@ -180,109 +180,131 @@ self.quantity & Holds an array of quantities of all ordered items & 151, 173, 17
 
 \begin{landscape}
 
+\subsubsection{Main Screen}
+
 \begin{figure}[H]
     \includegraphics[height = 15cm]{./Maintenance/images/screen1}
-    \caption{} \label{fig:screen1}
+    \caption{The screen that appears once application opens} \label{fig:screen1}
 \end{figure}
 
+\subsubsection{Manage Bookings}
 \begin{figure}[H]
     \includegraphics[height = 15cm]{./Maintenance/images/screen2}
-    \caption{} \label{fig:screen2}
+    \caption{Manage Bookings that can be accessed from the main screen} \label{fig:screen2}
 \end{figure}
 
+\subsubsection{Add Bookings}
 \begin{figure}[H]
     \includegraphics[height = 15cm]{./Maintenance/images/screen3}
-    \caption{} \label{fig:screen3}
+    \caption{Add Booking screen whic can be accessed from Bookings on the menu bar or the Manage Bookings screen} \label{fig:screen3}
 \end{figure}
 
+\subsubsection{Delete Bookings}
 \begin{figure}[H]
     \includegraphics[height = 15cm]{./Maintenance/images/screen4}
-    \caption{} \label{fig:screen4}
+    \caption{Delete Booking screen which can be accessed from Bookings on the menu bar or the Manage Bookings screen} \label{fig:screen4}
 \end{figure}
 
+\subsubsection{Add Item To Menu}
 \begin{figure}[H]
     \includegraphics[height = 15cm]{./Maintenance/images/screen5}
-    \caption{} \label{fig:screen5}
+    \caption{Add Item screen which can be accessed from Item Menu on the menu bar} \label{fig:screen5}
 \end{figure}
 
+\subsubsection{Delete Item Off Menu}
 \begin{figure}[H]
     \includegraphics[height = 15cm]{./Maintenance/images/screen6}
-    \caption{} \label{fig:screen6}
+    \caption{Delete Item screen which can be accessed from Item Menu on he menu bar} \label{fig:screen6}
 \end{figure}
 
+\subsubsection{Update Item Price}
 \begin{figure}[H]
     \includegraphics[height = 15cm]{./Maintenance/images/screen7}
-    \caption{} \label{fig:screen7}
+    \caption{Update Item Price screen which can be accessed from Item Menu on the menu bar} \label{fig:screen7}
 \end{figure}
 
+\subsubsection{Update Booking}
 \begin{figure}[H]
     \includegraphics[height = 15cm]{./Maintenance/images/screen8}
-    \caption{} \label{fig:screen8}
+    \caption{Update Booking screen which can be accessed from Item Menu on the menu bar} \label{fig:screen8}
 \end{figure}
 
+\subsubsection{Assign Customer To Table}
 \begin{figure}[H]
     \includegraphics[height = 15cm]{./Maintenance/images/screen9}
-    \caption{} \label{fig:screen9}
+    \caption{Assign customer box after clicking on "Select Table" on main screen} \label{fig:screen9}
 \end{figure}
 
+\subsubsection{Manage Order}
 \begin{figure}[H]
     \includegraphics[height = 15cm]{./Maintenance/images/screen10}
-    \caption{} \label{fig:screen10}
+    \caption{Manage Order box after clicking on "Create" from assign customer box} \label{fig:screen10}
 \end{figure}
 
+\subsubsection{Add Item To Order}
 \begin{figure}[H]
     \includegraphics[height = 15cm]{./Maintenance/images/screen11}
-    \caption{} \label{fig:screen11}
+    \caption{Add Item To Order box after clicking on "Add" from the Manage Order Box} \label{fig:screen11}
 \end{figure}
 
+\subsubsection{Delete Item Off Order}
 \begin{figure}[H]
     \includegraphics[height = 15cm]{./Maintenance/images/screen12}
-    \caption{} \label{fig:screen12}
+    \caption{Delete Item Off Order box after clicking on "Delete" from the Manage Order box (The items ordered will be shown in the table)} \label{fig:screen12}
 \end{figure}
 
+\subsubsection{Invoice Preview}
 \begin{figure}[H]
     \includegraphics[height = 15cm]{./Maintenance/images/screen13}
-    \caption{} \label{fig:screen13}
+    \caption{The peview of the ivoice relating to the order after clicking on Invoice Preview from the Manage Order box} \label{fig:screen13}
 \end{figure}
 
+\subsubsection{Print Options/Confirmation}
 \begin{figure}[H]
     \includegraphics[height = 15cm]{./Maintenance/images/screen14}
-    \caption{} \label{fig:screen14}
+    \caption{Print options/confirmation after clicking on "Print Invoice" from the Manage Order box} \label{fig:screen14}
 \end{figure}
 
+\subsubsection{Assign box (Before clicking on "Select")}
 \begin{figure}[H]
     \includegraphics[height = 15cm]{./Maintenance/images/screen15}
-    \caption{} \label{fig:screen15}
+    \caption{Before clicking on the "Select" button on the Assign Custome box} \label{fig:screen15}
 \end{figure}
 
+\subsubsection{After clicking on "Select"}
 \begin{figure}[H]
     \includegraphics[height = 15cm]{./Maintenance/images/screen16}
-    \caption{} \label{fig:screen16}
+    \caption{After clicking on "Select"  - Manage Order box appears} \label{fig:screen16}
 \end{figure}
 
+\subsubsection{Search Order}
 \begin{figure}[H]
     \includegraphics[height = 15cm]{./Maintenance/images/screen17}
-    \caption{} \label{fig:screen17}
+    \caption{Search Order screen which can be found on the Tool Bar} \label{fig:screen17}
 \end{figure}
 
+\subsubsection{View Bookings on Tool Bar}
 \begin{figure}[H]
     \includegraphics[height = 15cm]{./Maintenance/images/screen18}
-    \caption{} \label{fig:screen18}
+    \caption{View Bookings screen which can be foundon the Tool Bar} \label{fig:screen18}
 \end{figure}
 
+\subsubsection{View Customers on Tool Bar}
 \begin{figure}[H]
     \includegraphics[height = 15cm]{./Maintenance/images/screen19}
-    \caption{} \label{fig:screen19}
+    \caption{View Cusomers screen whic can be found on the Tool Bar} \label{fig:screen19}
 \end{figure}
 
+\subsubsection{View Dishes on Tool Bar}
 \begin{figure}[H]
     \includegraphics[height = 15cm]{./Maintenance/images/screen20}
-    \caption{} \label{fig:screen20}
+    \caption{View Dishes screen ca be found on the Tool Bar} \label{fig:screen20}
 \end{figure}
 
+\subsubsection{View Drinks on Tool Bar}
 \begin{figure}[H]
     \includegraphics[height = 15cm]{./Maintenance/images/screen21}
-    \caption{} \label{fig:screen21}
+    \caption{View Drinks screen which can be found on the Tool Bar} \label{fig:screen21}
 \end{figure}
 \end{landscape}
 
@@ -639,6 +661,10 @@ After completing the series of tests, i believe that my application is reliable 
 \subsubsection{Test 4.03 - Manage order total price}
 There was a problem with the manage order box where the Total Price was suppose to be displayed. The problem was that it was suppose to display the total price after adding an item to the order or deleting an item off the order which it didn't (The widget didn't refresh with the new total price). However, I know that the algorithm for the total price is correct because I used the same algorithm for the invoice (which worked as test 4.03.01 was successful). At this current time, I am not sure how to fix it in terms of coding but I do know that the problem is that the line edit doesn't refresh with the new value.
 
+\subsubsection{Test 4.09 - Add Booking (Telephone problem)}
+
+All the details of the booking correctly stored in the database apart from the telephone number. Telephone numbers usually start of with a '0' i.e '01368 902412', the '0' was not stored in the database so the actual data that would be stored would come out as '1368902412'.
+
 
 \section{Code Explanations}
 
@@ -748,8 +774,10 @@ Example:
 %the code below can be uncommented and used to get a code section from a particular file
 \pythonfile[firstline=1]{./Implementation/GUI/add_booking.py}
 
+
 \subsection{add\_item\_to\_menu.py}
 \pythonfile[firstline=1]{./Implementation/GUI/add_item_to_menu.py}
+
 
 \newpage
 \subsection{add\_item\_to\_order.py}
